--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,16 @@
     padding: 0;
     margin: 0;
     font-family: Poppins;
+    overflow-x: hidden;
 }
 
 html {
     scroll-behavior: smooth;
+}
+
+body {
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 :root {
