--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
     padding: 0;
     margin: 0;
     font-family: Poppins;
+    
 }
 
 html {
@@ -102,7 +103,7 @@ body {
     margin-top: 35px;
     font-weight: 600;
     text-transform: uppercase;
-    padding: 20px 40px;
+    padding: 20px;
     width: 25rem;
     background: var(--gradient2);
     border-radius: 50px;
@@ -830,6 +831,10 @@ input[type=number]::-webkit-outer-spin-button {
     .CTA2>a,
     .CTA1_tp>a {
         font-size: 1.2rem;
+    }
+
+    .CTA1 {
+    width: 20rem;
     }
 
     .seccion3 {
